Correção dos filtros dos autocompletes

--- a/VaccineC/src/app/pages/agendamento/add-borrower-bottom-sheet.html
+++ b/VaccineC/src/app/pages/agendamento/add-borrower-bottom-sheet.html
@@ -17,7 +17,7 @@
                     placeholder="Selecione o Tomador"
                     aria-label="Number" 
                     matInput 
-                    formControlName="Person"
+                    [formControl]="$any(budgetProductForm).get('Person')"
                     [matAutocomplete]="autoPerson" 
                     [(ngModel)]="person"
                     required>
