--- a/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-entry-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-entry-dialog.html
@@ -7,15 +7,16 @@
                 <mat-label>Produto</mat-label>
                 <input type="text" 
                        (click)="searchProductByAutoComplete()" 
-                       formControlName="ProductName"
                        [(ngModel)]="ProductName" 
                        placeholder="Selecione o Produto" 
                        aria-label="Number" 
                        matInput
-                       [formControl]="myControl" 
+                       [formControl]="$any(movementProductForm).get('ProductName')"
                        [matAutocomplete]="auto" 
                        required>
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayState" (optionSelected)="onSelectionChanged($event)">
+                <mat-autocomplete #auto="matAutocomplete" 
+                                  [displayWith]="displayState"
+                                  (optionSelected)="onSelectionChanged($event)">
                     <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                         {{option.Name}}
                     </mat-option>
