--- a/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
@@ -102,7 +102,7 @@
                            placeholder="Selecione a Pessoa" 
                            aria-label="Number" 
                            matInput 
-                           formControlName="PersonId"
+                           [formControl]="$any(authorizationForm).get('PersonId')"
                            [matAutocomplete]="autoPerson" 
                            [(ngModel)]="personId" 
                            required>
@@ -171,7 +171,7 @@
                            placeholder="Selecione o Orçamento" 
                            aria-label="Number" 
                            matInput 
-                           formControlName="BudgetId"
+                           [formControl]="$any(authorizationForm).get('BudgetId')"
                            [matAutocomplete]="autoBudget" 
                            [(ngModel)]="budgetId" 
                            required>
@@ -327,7 +327,7 @@
                            placeholder="Selecione o Orçamento" 
                            aria-label="Number" 
                            matInput
-                           formControlName="BudgetJuridicalId" 
+                           [formControl]="$any(authorizationJuridicalForm).get('BudgetJuridicalId')"
                            [matAutocomplete]="autoBudgetJuridical"
                            [(ngModel)]="budgetJuridicalId" 
                            required>
