Quick Search Ordered

--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
@@ -15,7 +15,7 @@
 
           <div class="row" style="margin:0.5rem">
 
-            <div class="col-xl-4 col-md-6 mb-4">
+            <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-success shadow h-100 py-2 card-dash">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -35,7 +35,7 @@
               </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 mb-4">
+            <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-info shadow h-100 py-2 card-dash">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -58,13 +58,35 @@
               </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 mb-4">
+            <div class="col-xl-3 col-md-6 mb-4">
+              <div class="card border-left-danger shadow h-100 py-2 card-dash">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
+                        R$ TOTAL NÃO NEGOCIADO
+                      </div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">
+                        {{totalBudgetAmountLost | currency : 'R$' }}
+                      </div>
+                      <div class="small-text mt-1" title="Total Mês Anterior">Anterior
+                        {{totalBudgetAmountLostPrevious | currency : 'R$' }}</div>
+                    </div>
+                    <div class="col-auto">
+                      <i class="fas fa-sack-xmark fa-2x text-gray-300"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-primary shadow h-100 py-2 card-dash">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                        R$ TOTAL DESCONTO CONCEDIDO
+                        R$ DESCONTO CONCEDIDO
                       </div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800">
                         {{totalBudgetDiscount | currency : 'R$' }}
