--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
@@ -104,6 +104,12 @@ form {
   border: none
 }
 
+.btn-warning {
+  color: #fff;
+  background-color: #f6c23e;
+  border-color: #f6c23e;
+}
+
 .mat-footer-row {
   font-weight: bold !important;
 }
